@@ -1,3 +1,8 @@
+Sun Aug 11 16:29:27 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* keytab.c: reset static global "quiet" each time; don't print
+ 	whoami on normal status messages
+
 Tue Aug  6 15:18:49 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* kadmin_ct.ct: get_{principals,policies} -> list_*; remove
